--- a/Views/Producto/Index.cshtml
+++ b/Views/Producto/Index.cshtml
@@ -6,26 +6,29 @@
 
 <h2>@ViewBag.Title</h2>
 
-<div class="row" style="text-align:right;padding:15px">
+<div class="form-group" style="text-align:right;padding:15px">
     <a class="btn btn-primary">Nuevo</a>
 </div>
 
 <div class="row">
     <div class="col-md-12">
-        <table class="table">
+        <table class="table table-bordered table-striped table-hover">
             <tr>
                 <th>Codigo</th> 
                 <th>Nombre</th> 
-                <th>#</th> 
+                <th>Fecha de Alta</th> 
+                <th></th> 
             </tr>
             @foreach (var oElemento in Model)
             {
                 <tr>
                     <td>@oElemento.id</td>
                     <td>@oElemento.Descripcion</td>
-                    <td>
-                        <a class="btn btn-default">Editar</a>
-                        <a class="btn btn-default">Eliminar</a>
+                    <td>@oElemento.fecha_alta</td>
+                    <td style="text-align:center">
+                        <a class="btn btn-success">Ver</a>
+                        <a class="btn btn-success">Editar</a>
+                        <a class="btn btn-danger">Eliminar</a>
                     </td>
                 </tr>
 
