Modelos necesarios para la carga del remito. En controlador remito ejecuto sp_movimientos_stock()

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,13 +36,12 @@
 
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <hr />
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - LiMa Software Parana ER</p>
-        </footer>
     </div>
+
+    <hr />
+    <footer>
+        <p>&nbsp; &copy; @DateTime.Now.Year - LiMa Software Parana ER</p>
+    </footer>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
